developer/src/kmc-kmn/test/fixtures/invalid-keyboards/error_contextex_cannot_reference_if.kmn
store(&TARGETS) 'any'

begin Unicode > use(main)

store(cons) 'bcd'
store(ifx) '1'

group(main) using keys

c ERROR_ContextExCannotReferenceIf:
if(ifx = '1') any(cons) + 'd' > context(1)
